--- a/Browser.html
+++ b/Browser.html
@@ -9,8 +9,11 @@
     <script src="main.js" defer></script>
 </head>
 <body>
+    <div class="title">
+        <h2>Tile Matching Game</h2>
+    </div>
     <div class="tiles"></div>
-
+    <button id="restartButton"> Restart Game</button>
 </body>
 
 </html>
